compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__functions__anonymous_functions.snap
---
source: compiler-core/src/cplusplus/tests/functions.rs
expression: "\nfn squared(x) {\n  let y = fn(z) { z * z }\n  y(x)\n}\n    "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

int64_t squared(int64_t x);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

int64_t squared(int64_t x) {
  gleam::Function<int64_t, int64_t> y = [=](int64_t z) -> int64_t {
    return z * z;
  };
  return y(x);
};

} // namespace my
} // namespace module

