compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__functions__captured_variables.snap
---
source: compiler-core/src/cplusplus/tests/functions.rs
expression: "\nfn do_stuff(x, y) {\n  let f = fn(z) { { x * y } + z }\n  f(x + y)\n}\n    "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

int64_t do_stuff(int64_t x, int64_t y);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

int64_t do_stuff(int64_t x, int64_t y) {
  gleam::Function<int64_t, int64_t> f = [=](int64_t z) -> int64_t {
    return (x * y) + z;
  };
  return f(x + y);
};

} // namespace my
} // namespace module

