compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__functions__generic_function.snap
---
source: compiler-core/src/cplusplus/tests/functions.rs
expression: "\nfn identity(x) {\n  x\n}\nfn wrapped(x) {\n  identity(x)\n}\n        "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

template <typename T$8>
T$8 identity(T$8 x);

template <typename T$10>
T$10 wrapped(T$10 x);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

template <typename T$8>
T$8 identity(T$8 x) {
  return x;
};

template <typename T$10>
T$10 wrapped(T$10 x) {
  return ::my::module::_private::identity<T$10>(x);
};

} // namespace my
} // namespace module

