compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__functions__multiple_module_functions.snap
---
source: compiler-core/src/cplusplus/tests/functions.rs
expression: "\nfn add(x, y) {\n  x + y\n}\nfn subtract(x, y) {\n  add(x, 0 - y)\n}\n    "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

int64_t add(int64_t x, int64_t y);

int64_t subtract(int64_t x, int64_t y);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

int64_t add(int64_t x, int64_t y) {
  return x + y;
};

int64_t subtract(int64_t x, int64_t y) {
  return ::my::module::_private::add(x, 0 - y);
};

} // namespace my
} // namespace module

