compiler-core/src/cplusplus/tests/snapshots/gleam_core__cplusplus__tests__functions__specialized.snap
---
source: compiler-core/src/cplusplus/tests/functions.rs
expression: "\nfn identity(x) {\n  x\n}\nfn add(a, b) {\n  identity(a) + identity(b)\n}\n        "
---
#ifndef MY_PACKAGE_MY_MODULE_H_
#define MY_PACKAGE_MY_MODULE_H_

#include <gleam.h>

namespace my {
namespace module {

template <typename T$8>
T$8 identity(T$8 x);

int64_t add(int64_t a, int64_t b);

} // namespace my
} // namespace module

#endif // MY_PACKAGE_MY_MODULE_H_

---
#include "module.h"

namespace my {
namespace module {

template <typename T$8>
T$8 identity(T$8 x) {
  return x;
};

int64_t add(int64_t a, int64_t b) {
  return (::my::module::_private::identity<int64_t>(a)) + (::my::module::_private::identity<int64_t>(b));
};

} // namespace my
} // namespace module

